// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover Components should render basic popover correctly 1`] = `
<div>
  <div
    data-testid="popover-root"
  >
    <button
      data-testid="popover-trigger"
    >
      Open Popover
    </button>
    <div
      data-testid="popover-portal"
    >
      <div
        class="z-50 w-72 rounded-md border bg-popover p-4 text-popover-foreground shadow-md outline-none data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2"
        data-align="center"
        data-side-offset="4"
        data-testid="popover-content"
      >
        <div>
          Basic Popover Content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Popover Components should render with anchor 1`] = `
<div>
  <div
    data-testid="popover-root"
  >
    <div
      data-testid="popover-anchor"
    >
      <div>
        Anchor Element
      </div>
    </div>
    <button
      data-testid="popover-trigger"
    >
      Open
    </button>
    <div
      data-testid="popover-portal"
    >
      <div
        class="z-50 w-72 rounded-md border bg-popover p-4 text-popover-foreground shadow-md outline-none data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2"
        data-align="center"
        data-side-offset="4"
        data-testid="popover-content"
      >
        Anchored Content
      </div>
    </div>
  </div>
</div>
`;

exports[`Popover Components should render with complex content 1`] = `
<div>
  <div
    data-testid="popover-root"
  >
    <button
      data-testid="popover-trigger"
    >
      Open Complex Popover
    </button>
    <div
      data-testid="popover-portal"
    >
      <div
        class="z-50 w-72 rounded-md border bg-popover p-4 text-popover-foreground shadow-md outline-none data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2"
        data-align="center"
        data-side-offset="4"
        data-testid="popover-content"
      >
        <div
          class="grid gap-4"
        >
          <div
            class="space-y-2"
          >
            <h4
              class="font-medium leading-none"
            >
              Dimensions
            </h4>
            <p
              class="text-sm text-muted-foreground"
            >
              Set the dimensions for the layer.
            </p>
          </div>
          <div
            class="grid gap-2"
          >
            <div
              class="grid grid-cols-3 items-center gap-4"
            >
              <label
                for="width"
              >
                Width
              </label>
              <input
                class="col-span-2 h-8"
                id="width"
                type="number"
                value="100%"
              />
            </div>
            <div
              class="grid grid-cols-3 items-center gap-4"
            >
              <label
                for="height"
              >
                Height
              </label>
              <input
                class="col-span-2 h-8"
                id="height"
                type="number"
                value="25px"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Popover Components should render with custom alignment 1`] = `
<div>
  <div
    data-testid="popover-root"
  >
    <button
      data-testid="popover-trigger"
    >
      Align Test
    </button>
    <div
      data-testid="popover-portal"
    >
      <div
        class="z-50 w-72 rounded-md border bg-popover p-4 text-popover-foreground shadow-md outline-none data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2"
        data-align="start"
        data-side-offset="4"
        data-testid="popover-content"
      >
        Start Aligned Content
      </div>
    </div>
    <div
      data-testid="popover-portal"
    >
      <div
        class="z-50 w-72 rounded-md border bg-popover p-4 text-popover-foreground shadow-md outline-none data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2"
        data-align="center"
        data-side-offset="4"
        data-testid="popover-content"
      >
        Center Aligned Content
      </div>
    </div>
    <div
      data-testid="popover-portal"
    >
      <div
        class="z-50 w-72 rounded-md border bg-popover p-4 text-popover-foreground shadow-md outline-none data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2"
        data-align="end"
        data-side-offset="4"
        data-testid="popover-content"
      >
        End Aligned Content
      </div>
    </div>
  </div>
</div>
`;

exports[`Popover Components should render with custom className 1`] = `
<div>
  <div
    data-testid="popover-root"
  >
    <button
      data-testid="popover-trigger"
    >
      Styled Trigger
    </button>
    <div
      data-testid="popover-portal"
    >
      <div
        class="z-50 w-72 rounded-md border bg-popover p-4 text-popover-foreground shadow-md outline-none data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2 custom-content"
        data-align="center"
        data-side-offset="4"
        data-testid="popover-content"
      >
        Custom Styled Content
      </div>
    </div>
  </div>
</div>
`;

exports[`Popover Components should render with custom offset 1`] = `
<div>
  <div
    data-testid="popover-root"
  >
    <button
      data-testid="popover-trigger"
    >
      Offset Test
    </button>
    <div
      data-testid="popover-portal"
    >
      <div
        class="z-50 w-72 rounded-md border bg-popover p-4 text-popover-foreground shadow-md outline-none data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2"
        data-align="center"
        data-side-offset="8"
        data-testid="popover-content"
      >
        Content with Custom Offset
      </div>
    </div>
  </div>
</div>
`;

exports[`Popover Components should render with different animation states 1`] = `
<div>
  <div
    data-testid="popover-root"
  >
    <button
      data-testid="popover-trigger"
    >
      Animation Test
    </button>
    <div
      data-testid="popover-portal"
    >
      <div
        class="z-50 w-72 rounded-md border bg-popover p-4 text-popover-foreground shadow-md outline-none data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2"
        data-align="center"
        data-side-offset="4"
        data-testid="popover-content"
      >
        Open State Content
      </div>
    </div>
    <div
      data-testid="popover-portal"
    >
      <div
        class="z-50 w-72 rounded-md border bg-popover p-4 text-popover-foreground shadow-md outline-none data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2"
        data-align="center"
        data-side-offset="4"
        data-testid="popover-content"
      >
        Closed State Content
      </div>
    </div>
  </div>
</div>
`;

exports[`Popover Components should render with different side positions 1`] = `
<div>
  <div
    data-testid="popover-root"
  >
    <button
      data-testid="popover-trigger"
    >
      Side Test
    </button>
    <div
      data-testid="popover-portal"
    >
      <div
        class="z-50 w-72 rounded-md border bg-popover p-4 text-popover-foreground shadow-md outline-none data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2"
        data-align="center"
        data-side-offset="4"
        data-testid="popover-content"
      >
        Top Content
      </div>
    </div>
    <div
      data-testid="popover-portal"
    >
      <div
        class="z-50 w-72 rounded-md border bg-popover p-4 text-popover-foreground shadow-md outline-none data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2"
        data-align="center"
        data-side-offset="4"
        data-testid="popover-content"
      >
        Right Content
      </div>
    </div>
    <div
      data-testid="popover-portal"
    >
      <div
        class="z-50 w-72 rounded-md border bg-popover p-4 text-popover-foreground shadow-md outline-none data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2"
        data-align="center"
        data-side-offset="4"
        data-testid="popover-content"
      >
        Bottom Content
      </div>
    </div>
    <div
      data-testid="popover-portal"
    >
      <div
        class="z-50 w-72 rounded-md border bg-popover p-4 text-popover-foreground shadow-md outline-none data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2"
        data-align="center"
        data-side-offset="4"
        data-testid="popover-content"
      >
        Left Content
      </div>
    </div>
  </div>
</div>
`;

exports[`Popover Components should render with nested content 1`] = `
<div>
  <div
    data-testid="popover-root"
  >
    <button
      data-testid="popover-trigger"
    >
      Open Nested
    </button>
    <div
      data-testid="popover-portal"
    >
      <div
        class="z-50 w-72 rounded-md border bg-popover p-4 text-popover-foreground shadow-md outline-none data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2"
        data-align="center"
        data-side-offset="4"
        data-testid="popover-content"
      >
        <div
          data-testid="popover-root"
        >
          <button
            data-testid="popover-trigger"
          >
            Nested Trigger
          </button>
          <div
            data-testid="popover-portal"
          >
            <div
              class="z-50 w-72 rounded-md border bg-popover p-4 text-popover-foreground shadow-md outline-none data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2"
              data-align="center"
              data-side-offset="4"
              data-testid="popover-content"
            >
              Nested Content
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
